--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,8 @@ The CT-Rex selector can be applied in various fields, such as in engineering,
 communications, physics, and all disciplines being presented with the problem
 of high-dimensional FDR control in the complex number domain.
 
+Note: A Python and C++ Implementation is coming soon.
+
 # Installation
 Before installing the `CT-Rex` package, you need to install the required `CT-LARS`
 package from [Github](https://github.com/G4Lactus/CTLARS_Package) (developer version).
