--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,13 @@ cat("Selected variables:\n", which(ctrex_obj$selected_var > 0))
 
 ```
 
+## Paper Citation
+This repository contains code of the CT-Rex selector which is the foundation
+for the work developed in [^1]. If you are interested in more details and our
+scripts, please reach out to us.
+
+[^1]: F. Scheidt, J. Machkour, and M. Muma, **FDR Control for Complex-Valued Data with Application in Single Snapshot Multi-Source Detection and DOA Estimation**. Presented at ICASSP 2025, Hyderabad, India. DOI: [10.1109/ICASSP49660.2025.10889705](https://doi.org/10.1109/ICASSP49660.2025.10889705).
+
 # Links
 If you interested in FDR controlled variable selection in the real number
 space have a look at:
