--- a/README.Rmd
+++ b/README.Rmd
@@ -32,9 +32,9 @@ package from [Github](https://github.com/G4Lactus/CTLARS_Package) (developer ver
 Afterwards you can install the `CT-Rex` package [Github](https://github.com/G4Lactus/CTrex_Package).
 
 ```r
-# install.packages("devtools")
-# devtools::install_github("https://github.com/G4Lactus/CTLARS_Package")
-# devtools::install_github("https://github.com/G4Lactus/CTrex_Package")
+install.packages("devtools")
+devtools::install_github("https://github.com/G4Lactus/CTLARS_Package")
+devtools::install_github("https://github.com/G4Lactus/CTrex_Package")
 ```
 
 # Quick Start
